--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     position: relative;
     display: inline-block;
     width: 160px;
-    msx-height: 160px;
+    max-height: 160px;
     margin-top: 50px;
     left: 105px;
     object-fit: cover;
@@ -150,7 +150,7 @@
             height: 80px;
             position: relative;
             left: 72px;
-            top: -1095px;
+            top: -1085px;
             transform: rotate(-15deg);
             
         }
